--- a/Second Script .ipynb
+++ b/Second Script .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "844a0c83",
+   "id": "61e3c0cb",
    "metadata": {},
    "source": [
     "## Importing libraries "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "id": "b57b6aae",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 193,
    "id": "d2b9ca82",
    "metadata": {},
    "outputs": [],
@@ -45,59 +45,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 194,
    "id": "dcc8cbd0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"session_key\"]\"}\n  (Session info: chrome=120.0.6099.234); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n0   chromedriver                        0x0000000102d0c4dc chromedriver + 4162780\n1   chromedriver                        0x0000000102d04664 chromedriver + 4130404\n2   chromedriver                        0x000000010295bbc0 chromedriver + 293824\n3   chromedriver                        0x00000001029a2040 chromedriver + 581696\n4   chromedriver                        0x00000001029e1ab0 chromedriver + 842416\n5   chromedriver                        0x00000001029956bc chromedriver + 530108\n6   chromedriver                        0x0000000102996930 chromedriver + 534832\n7   chromedriver                        0x0000000102cd1e08 chromedriver + 3923464\n8   chromedriver                        0x0000000102cd63dc chromedriver + 3941340\n9   chromedriver                        0x0000000102cba038 chromedriver + 3825720\n10  chromedriver                        0x0000000102cd6f3c chromedriver + 3944252\n11  chromedriver                        0x0000000102cac6f4 chromedriver + 3770100\n12  chromedriver                        0x0000000102cf3980 chromedriver + 4061568\n13  chromedriver                        0x0000000102cf3af8 chromedriver + 4061944\n14  chromedriver                        0x0000000102d042e4 chromedriver + 4129508\n15  libsystem_pthread.dylib             0x000000018c3fa034 _pthread_start + 136\n16  libsystem_pthread.dylib             0x000000018c3f4e3c thread_start + 8\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[191], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m username \u001b[38;5;241m=\u001b[39m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mby\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mID\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msession_key\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m username\u001b[38;5;241m.\u001b[39msend_keys(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madeebrehman5076@gmail.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Log in with your credentials\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# (Manually log in or use a more secure method for handling credentials in production code)\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py:742\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m    739\u001b[0m     by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[1;32m    740\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 742\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py:348\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    346\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[0;32m--> 348\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    349\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    350\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[0;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"session_key\"]\"}\n  (Session info: chrome=120.0.6099.234); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n0   chromedriver                        0x0000000102d0c4dc chromedriver + 4162780\n1   chromedriver                        0x0000000102d04664 chromedriver + 4130404\n2   chromedriver                        0x000000010295bbc0 chromedriver + 293824\n3   chromedriver                        0x00000001029a2040 chromedriver + 581696\n4   chromedriver                        0x00000001029e1ab0 chromedriver + 842416\n5   chromedriver                        0x00000001029956bc chromedriver + 530108\n6   chromedriver                        0x0000000102996930 chromedriver + 534832\n7   chromedriver                        0x0000000102cd1e08 chromedriver + 3923464\n8   chromedriver                        0x0000000102cd63dc chromedriver + 3941340\n9   chromedriver                        0x0000000102cba038 chromedriver + 3825720\n10  chromedriver                        0x0000000102cd6f3c chromedriver + 3944252\n11  chromedriver                        0x0000000102cac6f4 chromedriver + 3770100\n12  chromedriver                        0x0000000102cf3980 chromedriver + 4061568\n13  chromedriver                        0x0000000102cf3af8 chromedriver + 4061944\n14  chromedriver                        0x0000000102d042e4 chromedriver + 4129508\n15  libsystem_pthread.dylib             0x000000018c3fa034 _pthread_start + 136\n16  libsystem_pthread.dylib             0x000000018c3f4e3c thread_start + 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "username = driver.find_element(by=By.ID, value=\"session_key\")\n",
     "username.send_keys(\"adeebrehman5076@gmail.com\")\n",
     "# Log in with your credentials\n",
     "# (Manually log in or use a more secure method for handling credentials in production code)\n",
     "password = driver.find_element(by=By.ID, value=\"session_password\")\n",
-    "password.send_keys(\"password\")"
+    "password.send_keys(\"###****\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b080542",
+   "execution_count": 197,
+   "id": "6e5f5eef",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Signing in through the script\n",
     "sign_in_button = driver.find_element(By.XPATH,'//*[@type=\"submit\"]')\n",
     "sign_in_button.click()\n",
-    "sleep(15)\n",
+    "sleep(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "714d34a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TimeoutException",
+     "evalue": "Message: \n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[200], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.google.com/search?q=site:linkedin.com/in/+AND+%22Adeeb%22+AND+%22Rehman%22&rlz=1C1CHZO_enIN1023IN1023&ei-jPaIY-mEGM6cseMPyZaNmAo&start=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(random\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m2.5\u001b[39m, \u001b[38;5;241m4.9\u001b[39m))\n\u001b[0;32m----> 6\u001b[0m linkedin_urls \u001b[38;5;241m=\u001b[39m [my_elem\u001b[38;5;241m.\u001b[39mget_attribute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m my_elem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_all_elements_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mXPATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m//div[@class=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43myuRUbf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m]/a[@href]\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[1;32m      7\u001b[0m lnks\u001b[38;5;241m.\u001b[39mappend(linkedin_urls)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/selenium/webdriver/support/wait.py:105\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[0;34m(self, method, message)\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m time\u001b[38;5;241m.\u001b[39mmonotonic() \u001b[38;5;241m>\u001b[39m end_time:\n\u001b[1;32m    104\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 105\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
+      "\u001b[0;31mTimeoutException\u001b[0m: Message: \n"
+     ]
+    }
+   ],
+   "source": [
     "jobdata = []\n",
     "lnks =[]\n",
     "for x in range(0,20,10):\n",
     "    driver.get(f'https://www.google.com/search?q=site:linkedin.com/in/+AND+%22Adeeb%22+AND+%22Rehman%22&rlz=1C1CHZO_enIN1023IN1023&ei-jPaIY-mEGM6cseMPyZaNmAo&start={x} ')\n",
     "    time.sleep(random.uniform(2.5, 4.9))\n",
-    "    #EC.element_to_be_clickable((By.CSS_SELECTOR, \"a[href*='signin']\")))\n",
-    "    linkedin_urls = [my_elem.get_attribute(\"href\") for my_elem in WebDriverWait(driver,20 ).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"//div[@class='yuRUbf']/a[@href]\")))]\n",
+    "    linkedin_urls = [my_elem.get_attribute(\"href\") for my_elem in WebDriverWait(driver,20 ).until(EC.visibility_of_all_elements_located((By.XPATH, \"//div[@class='yuRUbf']/a[@href]\")))]\n",
     "    lnks.append(linkedin_urls)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "2a72c751",
+   "id": "1d07b9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "ca4043e3",
+   "id": "de3a4d53",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "251f2699",
+   "id": "bc38fcd5",
    "metadata": {},
    "outputs": [],
    "source": []
